--- a/pythonanywhere/templates/leaderboard.html
+++ b/pythonanywhere/templates/leaderboard.html
@@ -121,7 +121,7 @@
             <!-- Leaderboard items will be populated here -->
         </ul>
     </div>
-    <button class="back-button" onclick="window.location.href='/pws'">Back</button>
+    <button class="back-button" onclick="window.location.href='/pws'">Terug</button>
 
     <script>
         window.onload = async () => {
