--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -489,7 +489,7 @@
             <div class="xp-bar">
               <div class="xp-fill" style="width: 0%;"></div>
             </div>
-            <div class="xp-progress">${progress} / ${nextLevelXp} XP</div>
+            <div class="xp-progress">${Math.round(progress)} / ${Math.round(nextLevelXp)} XP</div>
           </div>
         `;
 
